--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Website</title>
+  <title>Duality</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- HERO SECTION : YOUR IMAGE -->
-  <section class="section hero">
+  <!-- SLIDE 1 : YOUR IMAGE -->
+  <section class="slide hero">
     <div class="overlay"></div>
-    <div class="hero-content">
+    <div class="text">
       <h1>DUALITY</h1>
       <p>
         Spider-Man’s life was never simple.  
@@ -20,10 +20,10 @@
     </div>
   </section>
 
-  <!-- SECOND SECTION : SPIDER-MAN IMAGE -->
-  <section class="section spiderman">
+  <!-- SLIDE 2 : SPIDER-MAN IMAGE -->
+  <section class="slide spiderman">
     <div class="overlay"></div>
-    <div class="spiderman-content">
+    <div class="text">
       <h2>The Other Side</h2>
       <p>Strength, sacrifice, and identity.</p>
     </div>
