--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
 
-  <!-- SLIDE 1 : YOUR IMAGE -->
-  <section class="slide hero">
+  <!-- SLIDE 1 : YOU -->
+  <section class="slide slide-you">
     <div class="overlay"></div>
-    <div class="text">
+    <div class="content">
       <h1>DUALITY</h1>
       <p>
-        Spider-Man’s life was never simple.  
-        Power came with responsibility, and every choice had a cost.
+        Life is never simple.  
+        Responsibility defines who we become.
       </p>
     </div>
   </section>
 
-  <!-- SLIDE 2 : SPIDER-MAN IMAGE -->
-  <section class="slide spiderman">
+  <!-- SLIDE 2 : SPIDER-MAN -->
+  <section class="slide slide-spiderman">
     <div class="overlay"></div>
-    <div class="text">
+    <div class="content">
       <h2>The Other Side</h2>
       <p>Strength, sacrifice, and identity.</p>
     </div>
