--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Duality</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- SLIDE 1 : YOU -->
-  <section class="slide slide-you">
-    <div class="overlay"></div>
-    <div class="content">
+  <div id="container">
+    <!-- BACK IMAGE (SPIDER-MAN) -->
+    <img src="images (7).jpeg" class="image back" />
+
+    <!-- FRONT IMAGE (YOU) -->
+    <img src="IMG-20250824-WA0024.jpg" class="image front" />
+
+    <!-- TEXT -->
+    <div class="text">
       <h1>DUALITY</h1>
-      <p>
-        Life is never simple.  
-        Responsibility defines who we become.
-      </p>
+      <p>Move to reveal the other side</p>
     </div>
-  </section>
+  </div>
 
-  <!-- SLIDE 2 : SPIDER-MAN -->
-  <section class="slide slide-spiderman">
-    <div class="overlay"></div>
-    <div class="content">
-      <h2>The Other Side</h2>
-      <p>Strength, sacrifice, and identity.</p>
-    </div>
-  </section>
-
+  <script src="script.js"></script>
 </body>
 </html>
