--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <div id="container">
 
-    <!-- BACK IMAGE -->
+    <!-- BACK IMAGE (SPIDER-MAN) -->
     <img src="image-7.jpeg" class="image back" />
 
-    <!-- FRONT IMAGE -->
+    <!-- FRONT IMAGE (YOU) -->
     <img src="IMG-20250824-WA0024.jpg" class="image front" />
 
     <!-- TEXT -->
