--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div id="container">
 
     <!-- BACK IMAGE (SPIDER-MAN) -->
-    <img src="image-7.jpeg" class="image back" />
+    <img src="IMG-20250824-WA0024.jpg" class="image back" />
 
     <!-- FRONT IMAGE (YOU) -->
-    <img src="IMG-20250824-WA0024.jpg" class="image front" />
+    <img src="images (7).jpeg" class="image front" />
 
     <!-- TEXT -->
     <div class="text">
